--- a/debian/control
+++ b/debian/control
@@ -4,17 +4,16 @@ Priority: extra
 Maintainer: YunoHost Contributors <contrib@yunohost.org>
 Build-Depends: debhelper (>=9), debhelper-compat (= 13), dh-python, python3-all (>= 3.7), python3-yaml, python3-jinja2
 Standards-Version: 3.9.6
+Version: 11.0.7
 Homepage: https://yunohost.org/
-
 Package: yunohost
 Essential: yes
 Architecture: all
-Depends: ${python3:Depends}, ${misc:Depends}
- , moulinette (>= 11.0), ssowat (>= 11.0)
+Depends: moulinette (>= 11.0), ssowat (>= 11.0)
  , python3-psutil, python3-requests, python3-dnspython, python3-openssl
  , python3-miniupnpc, python3-dbus, python3-jinja2
  , python3-toml, python3-packaging, python3-publicsuffix2
- , python3-ldap, python3-zeroconf (>= 0.36), python3-lexicon,
+ , python3-ldap, python3-zeroconf (>= 0.36), python3-lexicon
  , python-is-python3
  , nginx, nginx-extras (>=1.18)
  , apt, apt-transport-https, apt-utils, dirmngr
